--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,5 +18,9 @@ jobs:
         with:
           node-version: 18
 
-      - name: Check node version
-        run: node --version
+      - name: Install dependencies
+        run: npm ci
+    
+      - name: Run test suite
+        run: npm run test
+    
