--- a/package.json
+++ b/package.json
@@ -1,38 +1,40 @@
 {
-  "name": "learn-cicd-typescript-starter",
-  "version": "1.0.0",
-  "main": "dist/main.js",
-  "type": "module",
-  "scripts": {
-    "db:generate": "drizzle-kit generate",
-    "db:migrate": "drizzle-kit migrate",
-    "db:studio": "drizzle-kit studio",
-    "build": "npx tsc",
-    "start": "node dist/main.js",
-    "dev": "npx tsc && node dist/main.js"
-  },
-  "devDependencies": {
-    "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.0",
-    "@types/node": "^22.9.0",
-    "drizzle-kit": "^0.28.1",
-    "globals": "^15.12.0",
-    "tsx": "^4.19.2",
-    "typescript": "^5.6.3"
-  },
-  "dependencies": {
-    "@libsql/client": "^0.14.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "drizzle-orm": "^0.36.2",
-    "express": "^4.21.1",
-    "uuid": "^11.0.3"
-  },
-  "prettier": {
-    "printWidth": 80,
-    "useTabs": false,
-    "tabWidth": 2,
-    "semi": true,
-    "singleQuote": false
-  }
+    "name": "learn-cicd-typescript-starter",
+    "version": "1.0.0",
+    "main": "dist/main.js",
+    "type": "module",
+    "scripts": {
+        "db:generate": "drizzle-kit generate",
+        "db:migrate": "drizzle-kit migrate",
+        "db:studio": "drizzle-kit studio",
+        "build": "npx tsc",
+        "start": "node dist/main.js",
+        "dev": "npx tsc && node dist/main.js",
+        "test": "vitest --run"
+    },
+    "devDependencies": {
+        "@types/cors": "^2.8.17",
+        "@types/express": "^5.0.0",
+        "@types/node": "^22.9.0",
+        "drizzle-kit": "^0.28.1",
+        "globals": "^15.12.0",
+        "tsx": "^4.19.2",
+        "typescript": "^5.6.3",
+        "vitest": "^4.0.16"
+    },
+    "dependencies": {
+        "@libsql/client": "^0.14.0",
+        "cors": "^2.8.5",
+        "dotenv": "^16.4.5",
+        "drizzle-orm": "^0.36.2",
+        "express": "^4.21.1",
+        "uuid": "^11.0.3"
+    },
+    "prettier": {
+        "printWidth": 80,
+        "useTabs": false,
+        "tabWidth": 2,
+        "semi": true,
+        "singleQuote": false
+    }
 }
