--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,5 +22,5 @@ jobs:
         run: npm ci
     
       - name: Run test suite
-        run: npm run test
+        run: npm run test -- --coverage
     
