--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
         
-      - name: Formatter
+      - name: Formatting
         run: npm run format:check
+
+      - name: Linting
+        run: npm run lint
     
