--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,9 +40,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
         
-      - name: Formatting
+      - name: Check formatting
         run: npm run format:check
 
-      - name: Linting
-        run: npm run lint
+      - name: Check linting
+        run: npm run lint -- --max-warnings=0
     
