--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -23,3 +23,17 @@ jobs:
 
       - name: Build application
         run: npm run build
+
+      - id: 'auth'
+        uses: 'google-github-actions/auth@v2'
+        with:
+          credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
+
+      - name: 'Set up Cloud SDK'
+        uses: 'google-github-actions/setup-gcloud@v3'
+
+      - name: 'Use gcloud CLI'
+        run: 'gcloud info'
+
+      - name: Build Docker image and push to Google Artifact Registry
+        run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-484114/notely-ar-repo/notely:0.0.1 .
