--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -9,6 +9,9 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
 
+    env:
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
+
     steps:
       - name: Check out code
         uses: actions/checkout@v4
@@ -37,6 +40,9 @@ jobs:
 
       - name: Build Docker image and push to Google Artifact Registry
         run: gcloud builds submit --tag us-central1-docker.pkg.dev/notely-484114/notely-ar-repo/notely:0.0.1 .
+
+      - name: Run database migration
+        run: npm run db:migrate
 
       - name: Deploy to Cloud Run
         run: gcloud run deploy notely --image us-central1-docker.pkg.dev/notely-484114/notely-ar-repo/notely:0.0.1 --region us-central1 --allow-unauthenticated --project notely-484114 --max-instances=4
